2010-05-28  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GormCore/GormDocument.h:
	* GormCore/GormDocument.m:
	* Palettes/0Menus/GormMenuAttributesInspector.m:
	* Palettes/0Menus/GormMenuAttributesInspector.gorm:
	Add support for a recent documents menu in gorm documents.

	* Palettes/0Menus/MenusPalette.m:
	Add a recent documents menu to the palette's file menu.
	Add undo and redo commands to the palette's edit menu.

2010-05-22 02:23-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/GormPreferences.gorm: Correct issue with pop up
	showing up as "Button."

2010-05-20 04:04-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFilePrefsManager.m: Update version
	* GormInfo.plist: Update version
	* Palettes/2Controls/GormPopUpButtonEditor.m: Override
	method to prevent changes to appearance during editing.
	* Version: Change to 1.2.13 for SVN version of Gorm.

2010-05-18 21:55-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Version: 1.2.12

2010-05-18 21:50-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog
	* GormCore/GormNSWindow.m
	* GormCore/GormNSPanel.m: Update to use new designated initializer.

2010-05-18 20:50-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ANNOUNCE
	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/readme.texi
	* NEWS
	* README: Updating for release.

2010-05-18 20:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist: Update version number.

2010-05-18 20:31-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* English.lproj/Gorm.gorm: Remove delegate connection, since it's
	manually set in the Gorm NSApplication subclass to self.
	* GormCore/GormDocumentController.[hm]: Added new method 
	buildDocumentType:
	* GormCore/GormDocument.m: Added call to touch in setName: so that
	the document would be set as modified when the user alters
	the name of an object in the document.